# django-sage-timezone

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/getting_started/: admin.rst  index.rst  installation.rst  modules.rst
locales/en/LC_MESSAGES/: django.po
locales/fa/LC_MESSAGES/: django.po
sage_timezone/: apps.py  urls.py
sage_timezone/forms/: timezone.py
sage_timezone/locale/ar/LC_MESSAGES/: django.po
sage_timezone/locale/fa/LC_MESSAGES/: django.po
sage_timezone/middleware/: timezone.py
sage_timezone/templates/admin/: timezone_selection.html
sage_timezone/templatetags/: timezone_tags.py
sage_timezone/tests/: test_middleware.py  test_view.py
sage_timezone/views/: timezone.py
templates/admin/: base_site.html  timezone_selection.html
